@@ -1,6 +1,7 @@
 version <unreleased>
 
 Extractors
+* [openload] Fix extraction (#10408)
 + [thisoldhouse] Recognize /tv-episode/ URLs (#11271)
 
 version 2016.12.01
